2007-06-23  Hubert Figuiere  <hub@figuiere.net>

	* Added xmp_get_property_and_bits() and all the
	option bits for it.

2007-06-21  Hubert Figuiere  <hub@figuiere.net>

	* exempi/exempi.cpp (xmp_files_get_xmp): More 
	exception handling. Should be better for error
	management and resource tracking: was causing XMP to 
	leak because the exception was not caught.
