@@ -138,6 +138,10 @@ void test_exempi()
 	BOOST_CHECK(xmp_get_property(xmp, NS_TIFF, "Make", the_prop));
 	BOOST_CHECK_EQUAL(strcmp("Nikon", xmp_string_cstr(the_prop)),	0); 
 
+	BOOST_CHECK(xmp_set_property2(xmp, NS_TIFF, "Make", "Leica", 0));
+	BOOST_CHECK(xmp_get_property(xmp, NS_TIFF, "Make", the_prop));
+	BOOST_CHECK_EQUAL(strcmp("Leica", xmp_string_cstr(the_prop)),	0); 
+
 	uint32_t bits;
 	BOOST_CHECK(xmp_get_property_and_bits(xmp, NS_DC, "rights[1]/?xml:lang",
 																				the_prop, &bits));
@@ -148,6 +152,13 @@ void test_exempi()
 																				the_prop, &bits));
 	BOOST_CHECK_EQUAL(bits, 0x50);
 	BOOST_CHECK(XMP_HAS_PROP_QUALIFIERS(bits));
+
+	BOOST_CHECK(xmp_set_array_item(xmp, NS_DC, "rights", 2,
+																 "foo", 0));
+	BOOST_CHECK(xmp_get_property_and_bits(xmp, NS_DC, "rights[2]",
+																				the_prop, &bits));
+	BOOST_CHECK(XMP_IS_PROP_SIMPLE(bits));
+	BOOST_CHECK_EQUAL(strcmp("foo", xmp_string_cstr(the_prop)),	0); 
 
 	xmp_string_free(the_prop);
 	xmp_free(xmp);
